syntax = "proto3";
package terra.feeshare.v1beta1;

import "gogoproto/gogo.proto";
import "terra/feeshare/v1beta1/feeshare.proto";

option go_package = "github.com/classic-terra/core/v2/x/feeshare/types";

// Params defines the feeshare module params
message Params {
  // enable_feeshare defines a parameter to enable the feeshare module
  bool enable_fee_share = 1;
  // developer_shares defines the proportion of the transaction fees to be
  // distributed to the registered contract owner
  string developer_shares = 2
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  // allowed_denoms defines the list of denoms that are allowed to be paid to
  // the contract withdraw addresses. If said denom is not in the list, the fees
  // will ONLY be sent to the community pool.
  // If this list is empty, all denoms are allowed.
  repeated string allowed_denoms = 3;
}

// GenesisState defines the module's genesis state.
message GenesisState {
  // params are the feeshare module parameters
  Params params = 1 [(gogoproto.nullable) = false];
  // FeeShare is a slice of active registered contracts for fee distribution
  repeated FeeShare fee_share = 2 [(gogoproto.nullable) = false];
}
